<resources>
    <!-- App Title -->
    <string name="app_name">WRUVandroid</string>

    <!-- back4app -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">8b9JgECsLcBl7BqZwUlPpnlrMKIejkd7iCgk5Xx5</string>
    <string name="back4app_client_key">yeJ60j6ti6vca4quzfUBo6rMBf2PIq5wI83cZk3g</string>

    <string name="schedule_class">Schedule</string>
    <string name="schedule_DJ">dj</string>
    <string name="schedule_Show">show_name</string>
    <string name="schedule_Description">description</string>
    <string name="schedule_WeekDay">day_of_week</string>
    <string name="schedule_StartTime">start_time</string>
    <string name="schedule_EndTime">end_time</string>

    <!-- Strings for activity_home.xml -->

    <!-- Strings for activity_live_feed.xml -->
    <string name="title_live_feed">Live Feed</string>

    <string name="live_feed_song">Song Name</string>
    <string name="live_feed_artist">Artist</string>
    <string name="live_feed_album">Album</string>
    <string name="live_feed_dj">DJ Name</string>
    <string name="live_feed_time"># minutes ago</string>
    <string name="live_feed_preforming">Now Listening To:</string>
    <string name="live_feed_time_slot">00:00am - 00:00am</string>
    <string name="live_feed_line_1">Text Line 1</string>
    <string name="live_feed_line_2">Text Line 2</string>
    <string name="live_feed_error">Oops! Something went wrong</string>

    <string name="menu_butt_description">Menu button to navigate to other pages</string>
    <string name="filter_butt_description">Menu button to filter what is shown in the live feed</string>
    <string name="img_song_description">Music note icon</string>
    <string name="img_dj_description">Turntable icon</string>
    <string name="img_error_description">Error icon</string>
    <string name="img_alert_description">Alert icon</string>

    <string name="filter_song">Songs</string>
    <string name="filter_dj">DJ Changes</string>
    <string name="filter_other">Other</string>

    <!-- Strings for activity_chat.xml -->
    <string name="title_chat_the_dj">Chat the DJ</string>
    <string name="send_button_text">Send</string>
    <string name="message">Enter Message</string>
    <string name="chat_server_uri">http://chat.barbershop.wruv.org/</string>

    <!-- Strings for activity_schedule.xml -->
    <string name="title_schedule">Schedule</string>
    <string name="schedule_show">Show</string>
    <string name="schedule_dj">DJ</string>
    <string name="schedule_description">Desctiption</string>

    <!-- Strings for menu_nav.xml -->
    <string name="nav_stream">Stream</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_livefeed">Live Feed</string>
    <string name="nav_chat">Chat</string>

</resources>
