<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            android:id="@+id/djIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:tint="@color/accentRed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/turntable"
            />

        <TextView
            android:id="@+id/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/live_feed_preforming"
            android:textColor="@color/fontWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/djIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/DjName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/live_feed_dj"
            android:textColor="@color/fontWhite"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@+id/show"
            app:layout_constraintTop_toBottomOf="@+id/show" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/live_feed_time_slot"
            android:textColor="@color/fontWhite"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@+id/DjName"
            app:layout_constraintTop_toBottomOf="@+id/DjName" />

        <TextView
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/live_feed_time"
            android:textColor="@color/fontWhite"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />



</android.support.constraint.ConstraintLayout>