<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/chat_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout" />

    <LinearLayout
        android:id="@+id/sendLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/fontBlack"
        app:layout_constraintBottom_toTopOf="@+id/navBarLayout">

        <EditText
            android:id="@+id/edit_text"
            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:hint="@string/message"
            android:inputType="text"
            android:maxLines="6"
            android:textColor="@color/fontWhite"
            app:layout_constraintBottom_toBottomOf="@+id/send_button"
            app:layout_constraintRight_toLeftOf="@+id/send_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/send_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.928"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.994" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/navBarLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/navChat"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/nav_chat"
            android:backgroundTint="@color/accentRed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/navSchedule"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/navSchedule"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/nav_schedule"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/navLiveFeed"
            app:layout_constraintRight_toLeftOf="@+id/navChat"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/navLiveFeed"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:background="@drawable/nav_live"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/navStream"
            app:layout_constraintRight_toLeftOf="@+id/navSchedule"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/navStream"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/nav_stream"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/navLiveFeed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="58dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/pageHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_dark"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/txtPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/title_chat_the_dj"
            android:textColor="@color/fontWhite"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/pageHeader"
            app:layout_constraintLeft_toLeftOf="@+id/pageHeader"
            app:layout_constraintTop_toTopOf="@+id/pageHeader" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:id="@+id/pageLayout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <!--<android.support.constraint.ConstraintLayout-->
        <!--android:id="@+id/chat_Layout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_marginTop="58dp"-->
        <!--android:layout_marginBottom="45dp"-->
        <!--android:visibility="visible"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/navBarLayout"-->
        <!--app:layout_constraintTop_toTopOf="@+id/headerLayout">-->

        <!--<android.support.v7.widget.RecyclerView-->
            <!--android:id="@+id/chat_recycler_view"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="394dp"-->
            <!--android:layout_marginStart="8dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_marginEnd="8dp"-->
            <!--android:layout_marginBottom="8dp"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:layout_constraintVertical_bias="0.0" />-->
    <!--</android.support.constraint.ConstraintLayout>-->

<!--</android.support.constraint.ConstraintLayout>-->